# clickops

./: .pg_service.conf  Justfile  LICENSE  Readme.md  manage.py  pyproject.toml  requirements.txt
clickops/: asgi.py  settings.py  urls.py  wsgi.py
discover/: discover.py
servers/: admin.py  api_urls.py  models.py  serializers.py  urls.py  views.py
servers/migrations/: 0001_initial.py  0002_server_network_alter_server_name_and_more.py  0003_network_remove_server_primary_ip_and_more.py  0004_alter_server_name.py  0005_operatingsystem_alter_server_name_alter_server_os.py  0006_domain_alter_server_status_alter_server_domain.py  0007_group_alter_server_name_and_more.py  0008_networkinterface.py  0009_server_author_server_created_server_extra_data_and_more.py  0010_alter_server_cpu_alter_server_disk_and_more.py
servers/templates/rest_framework/: base.html
servers/templates/servers/: list.html  scan.html
servers/tests/fixtures/: serverinfo_appliances.json  serverinfo_import.json  servers.json
test/fixtures/: kroesch.lan.json
